--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mongoose": "4.7.7"
+    "mongoose": "4.7.7",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "eslint-config-equimper": "^2.2.2",
     "nodemon": "^1.18.3"
   }
 }
